# uae_telecom_recommender_systems

./: .gitignore  DATA_CORRECTION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  config.py  demo_pipeline.py  fix_labels.py  fix_missing_data.py  main_pipeline.py  network_infra_recommendations_20250926.csv  network_infra_waterfall_recommender_v1.ipynb  network_infrastructure_risk_register.csv  network_infrastructure_risk_register.xlsx  network_infrastructure_risk_register_fixed.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: CHECKLIST_PROJECT_SETUP.md
examples/: simple_example.py
src/: __init__.py  data_ingestion.py  feature_engineering.py  modeling.py
src/ml_models/: __init__.py  feature_engineering.py  risk_predictor.py
src/rms_pipeline/: __init__.py  documentation.py  monitoring.py  qualitative_analysis.py  quantitative_analysis.py  response_planning.py  risk_identification.py
tests/: test_recommender_system.py
uae_telecom_recommender/: __init__.py
uae_telecom_recommender/algorithms/: __init__.py  ml_algorithms.py
uae_telecom_recommender/config/: __init__.py  config_manager.py
uae_telecom_recommender/core/: __init__.py  recommender.py  risk_assessor.py
uae_telecom_recommender/utils/: __init__.py  helpers.py
