[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uae-telecom-recommender"
version = "1.0.0"
description = "Sector-aware recommender systems for project risk management in UAE telecom infrastructure"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bet_Hans"}
]
keywords = ["telecom", "recommender-system", "risk-management", "uae", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "jsonschema>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/hansvitalic/uae_telecom_recommender_systems"
Repository = "https://github.com/hansvitalic/uae_telecom_recommender_systems"
Issues = "https://github.com/hansvitalic/uae_telecom_recommender_systems/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uae_telecom_recommender*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true